# machine-learning-engineering-fernando

./: README.md
api-flask/: app.py  app2.py  app_recipes.py  config.py  links_extraidos_novo.txt  scarpping_books.py  scrapping_olhardigital.py  scrapping_podcasts.py  scrapping_vinicultura.py
api-flask/instance/: recipes.db
aula2/: app.py
fast-api/: pyproject.toml
fast-api/.history/: main_20250428213242.py
fast-api/.history/src/: main_20250428213118.py
lab/: links_extraidos.txt  links_extraidos_completos.txt  scrapping_podcasts_selenium.py  scrapping_podcasts_soap.py
python-recap/: main.py
python-recap/.history/: main_20250424215102.py  main_20250424215407.py
