[project]
name = "projeto-fast-api"
version = "1.0.0"
description = "Criação de API utilizando o Framework Fast API"
authors = [
    {name = "fernando-lfs",email = "fernando.l.f@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
